# purenes

./: README.md  purenes.cabal  stack.yaml
app/: Main.hs
src/: Cartridge.hs  Cpu.hs  Ines.hs  Rom.hs
