name:                purenes
version:             0.1.0.0
synopsis:            A NES emulator written in Haskell.
description:         Please see README.md
homepage:            http://github.com/Rydgel/purenes#readme
license:             BSD3
license-file:        LICENSE
author:              Jérôme Mahuet
maintainer:          jerome.mahuet@gmail.com
copyright:           2016 Jérôme Mahuet
category:            Emulator
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Rom
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , cereal
                     , attoparsec
                     , attoparsec-binary
  default-language:    Haskell2010

executable purenes-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:       base
                     , purenes
  default-language:    Haskell2010

test-suite purenes-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , purenes
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N -O2
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Rydgel/purenes
